tests/baselines/reference/i3.errors.txt
tests/cases/compiler/i3.ts(6,1): error TS2322: Type 'I3' is not assignable to type '{ one: number; }':
  Required property 'one' cannot be reimplemented with optional property in 'I3'.


==== tests/cases/compiler/i3.ts (1 errors) ====
    interface I3 { one?: number; }; 
    var x: {one: number};
    var i: I3;
    
    i = x;
    x = i;
    ~
!!! error TS2322: Type 'I3' is not assignable to type '{ one: number; }':
!!! error TS2322:   Required property 'one' cannot be reimplemented with optional property in 'I3'.